assets/sass/partials/_layout.scss
@import "../modules/colors";
@import "../modules/dimensions";

.container {
  position: absolute;
  width: 100%;
  height: 100%;
}

.footer {
  position: absolute;
  left: 0px;
  bottom: 0px;
  right: 0px;
  padding: 5px 10px;
  height: $footer-height;
  background-color: $anthrazit;
  box-sizing: border-box;
  text-align: center;

  &:after {
    content: "";
    position: absolute;
    height: 5px;
    left: 0px;
    right: 0px;
    top: 0px;
    background: $brand-dark;
    background: -moz-linear-gradient(left, $brand-dark 0%, $brand-light 100%);
    background: -webkit-linear-gradient(left, $brand-dark 0%, $brand-light 100%);
    background: linear-gradient(to right, $brand-dark 0%, $brand-light 100%);
  }
}

.menubar {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 0px;
  height: $menubar-height;
  background-color: $anthrazit;
  box-sizing: border-box;

  &:after {
    content: "";
    position: absolute;
    height: 5px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background: linear-gradient(to right, $brand-dark 0%, $brand-light 100%);
  }

  input {
    box-sizing: border-box;
    background: lighten($anthrazit, 3%);
    border: 1px solid darken($anthrazit, 3%);
    border-radius: 2px;
    font-size: inherit;
    outline: none;
    padding: 4px 5px 1px 5px;
    color: white;
    width: 110px;
    transition-property: width, border-color;
    transition-duration: 200ms;
    &:focus {
      width: 200px;
      border-color: darken($anthrazit, 7%);
    }
  }

  .logo {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 150px;
    bottom: 30px;
    padding: 10px;
    font-size: 20px;
    color: white;
  }

  .projects {
    position: absolute;
    top: 20px;
    height: 30px;
    left: 150px;
    right: 0px;
    overflow: hidden;
    text-align: right;
    input {
      margin-right: 10px;
      margin-top: 2px;
    }
    ul {
      list-style: none;
      margin: 0px;
      padding: 0px;
      li {
        float: right;
        padding: 4px 10px;
        font-weight: bold;
        color: $gray;
        cursor: pointer;
        transition-property: color;
        transition-duration: 100ms;
        &:hover {
          color: $brand-light;
        }
        &.active {
          color: $brand-light;
          background-color: lighten($anthrazit, 5%);
          border-bottom-right-radius: 2px;
          border-bottom-left-radius: 2px;
        }
      }
    }
  }

  .tables {
    position: absolute;
    bottom: 5px;
    left: 0px;
    right: 0px;
    height: 30px;
    input {
      margin-left: 10px;
      margin-top: 1px;
    }
    ul {
      list-style: none;
      margin: 0px;
      padding: 0px;
      height: 100%;
      float: left;
      li {
        float: left;
        font-weight: bold;
        padding: 3px 10px;
        height: 100%;
        cursor: pointer;
        color: $gray;
        display: inline-block;
        box-sizing: border-box;
        transition-property: color;
        transition-duration: 75ms;
        &:hover {
          color: $brand-light;
        }
        &.active {
          color: $brand-light;
          background-color: lighten($anthrazit, 5%);
          border-top-right-radius: 2px;
          border-top-left-radius: 2px;
        }
      }
    }
  }
  .logout {
    position: absolute;
    top: 0px;
    right: 0px;
    text-align: right;
  }
}

.message {
  position: absolute;
  top: $menubar-height + 10px;
  right: 10px;
  $message-box-width: 200px;
  $message-box-padding: 5px;
  width: $message-box-width;
  padding: $message-box-padding;
  color: white;
  .header {
    display: table;
    .title {
      display: table-cell;
      .symbol {
        padding: 8px;
      }
      font-weight: bold;
      font-size: larger;
      width: $message-box-width - 2 * $message-box-padding - 10px;
    }
    .button {
      display: table-cell;
      vertical-align: top;
      button {
        color: white;
        &:hover {
          color: black;
        }
      }
    }
  }
  .content {
  }
}
.message.info {
  background-color: blue;
}
.message.success {
  background-color: green;
}
.message.warning {
  background-color: orange;
}
.message.error {
  background-color: red;
}

